--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app by Nurhusein"
+      content="Byggahemsida, Bookingsystem swish  Webshop"
     />
     <link rel="apple-touch-icon" href="ladda.jpeg" />
     <!--
